tests/snapshots/snapshots__budget_go_version_1000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 1000 (1000 tokens)

CHANGELOG.md

README.md
     1→# Versioning Library for Go
     6→go-version is a library for parsing versions and version constraints,
     7→and verifying versions against a set of constraints. go-version
     8→can sort a collection of versions properly, handles prerelease/beta
     9→versions, can increment versions, etc.
    10→
      →…
    13→## Installation and Usage
    15→Package documentation can be found on
    16→[Go Reference](https://pkg.go.dev/github.com/hashicorp/go-version).
    17→
    18→Installation can be done with a normal `go get`:
    19→
    20→```
      →…
    24→#### Version Parsing and Comparison
    37→#### Version Constraints
    49→#### Version Sorting
    63→## Issues and Contributing
    65→If you find an issue with this library, please report an issue. If you'd
    66→like, we welcome any contributions. Fork this library and submit a pull
    67→request.

constraint.go
     6→import …
    31→// Constraint represents a single constraint for a version, such as
    32→// ">= 1.0".
    33→type Constraint struct {
    34→	f        constraintFunc
    35→	op       operator
    36→	check    *Version
    37→	original string
    38→}
    40→func (c *Constraint) Equals(con *Constraint) bool {
    44→// Constraints is a slice of constraints. We make a custom type so that
    45→// we can add methods to it.
    46→type Constraints []*Constraint
    50→type constraintOperation struct {
    51→	op operator
    52→	f  constraintFunc
    53→}
    58→func NewConstraint(v string) (Constraints, error) {
    75→func MustConstraints(c Constraints, err error) Constraints {
    84→func (cs Constraints) Check(v *Version) bool {
   102→func (cs Constraints) Equals(c Constraints) bool {
   125→func (cs Constraints) Len() int {
   129→func (cs Constraints) Less(i, j int) bool {
   140→func (cs Constraints) Swap(i, j int) {
   145→func (cs Constraints) String() string {
   155→func (c *Constraint) Check(v *Version) bool {
   161→func (c *Constraint) Prerelease() bool {
   165→func (c *Constraint) String() string {
   228→//-------------------------------------------------------------------
   229→// Constraint functions
   230→//-------------------------------------------------------------------
   232→type operator rune

constraint_test.go
     6→import …

version.go
     6→import …
    15→// The compiled regular expression used to test the validity of a version.
    16→var (
    17→	versionRegexp     *regexp.Regexp
    18→	versionRegexpOnce sync.Once
    19→	semverRegexp      *regexp.Regexp
    20→	semverRegexpOnce  sync.Once
    37→// The raw regular expression string used for testing the validity
    38→// of a version.
    39→const (
    40→	VersionRegexpRaw string = `v?([0-9]+(\.[0-9]+)*?)` +
    45→	// SemverRegexpRaw requires a separator between version and prerelease
    46→	SemverRegexpRaw string = `v?([0-9]+(\.[0-9]+)*?)` +
    52→// Version represents a single version.
    53→type Version struct {
    54→	metadata string
    55→	pre      string
    56→	segments []int64
    57→	si       int
    58→	original string
    59→}

version_collection.go
     6→// Collection is a type that implements the sort.Interface interface
     7→// so that versions can be sorted.
     8→type Collection []*Version
    10→func (v Collection) Len() int {
    14→func (v Collection) Less(i, j int) bool {
    18→func (v Collection) Swap(i, j int) {

version_collection_test.go
     6→import …
    12→func TestCollection(t *testing.T) {

version_test.go
     6→import …
