tests/snapshots/snapshots__budget_go_version_4000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 4000 (4061 tokens)

CHANGELOG.md

README.md
     1→# Versioning Library for Go
     6→go-version is a library for parsing versions and version constraints,
     7→and verifying versions against a set of constraints. go-version
     8→can sort a collection of versions properly, handles prerelease/beta
     9→versions, can increment versions, etc.
    10→
    11→Versions used with go-version must follow [SemVer](http://semver.org/).
    12→
    13→## Installation and Usage
    15→Package documentation can be found on
    16→[Go Reference](https://pkg.go.dev/github.com/hashicorp/go-version).
    17→
    18→Installation can be done with a normal `go get`:
    19→
    20→```
    21→$ go get github.com/hashicorp/go-version
    22→```
    23→
    24→#### Version Parsing and Comparison
    26→```go
    27→v1, err := version.NewVersion("1.2")
    28→v2, err := version.NewVersion("1.5+metadata")
    29→
      →…
    37→#### Version Constraints
    39→```go
    40→v1, err := version.NewVersion("1.2")
    41→
    42→// Constraints example.
      →…
    49→#### Version Sorting
    51→```go
    52→versionsRaw := []string{"1.1", "0.7.1", "1.4-beta", "1.4", "2"}
    53→versions := make([]*version.Version, len(versionsRaw))
    54→for i, raw := range versionsRaw {
      →…
    63→## Issues and Contributing
    65→If you find an issue with this library, please report an issue. If you'd
    66→like, we welcome any contributions. Fork this library and submit a pull
    67→request.

constraint.go
     6→import (
     7→	"fmt"
     8→	"regexp"
     9→	"sort"
    10→	"strings"
    11→	"sync"
    12→)
    14→var (
    15→	constraintRegexp     *regexp.Regexp
    16→	constraintRegexpOnce sync.Once
    19→func getConstraintRegexp() *regexp.Regexp {
    31→// Constraint represents a single constraint for a version, such as
    32→// ">= 1.0".
    33→type Constraint struct {
    34→	f        constraintFunc
    35→	op       operator
    36→	check    *Version
    37→	original string
    38→}
    40→func (c *Constraint) Equals(con *Constraint) bool {
    41→	return c.op == con.op && c.check.Equal(con.check)
    42→}
    44→// Constraints is a slice of constraints. We make a custom type so that
    45→// we can add methods to it.
    46→type Constraints []*Constraint
    48→type constraintFunc func(v, c *Version) bool
    50→type constraintOperation struct {
    51→	op operator
    52→	f  constraintFunc
    53→}
    55→// NewConstraint will parse one or more constraints from the given
    56→// constraint string. The string must be a comma-separated list of
    57→// constraints.
    58→func NewConstraint(v string) (Constraints, error) {
    59→	vs := strings.Split(v, ",")
      →	…
    73→// MustConstraints is a helper that wraps a call to a function
    74→// returning (Constraints, error) and panics if error is non-nil.
    75→func MustConstraints(c Constraints, err error) Constraints {
    76→	if err != nil {
      →	…
    83→// Check tests if a version satisfies all the constraints.
    84→func (cs Constraints) Check(v *Version) bool {
    85→	for _, c := range cs {
      →	…
    94→// Equals compares Constraints with other Constraints
    95→// for equality. This may not represent logical equivalence
    96→// of compared constraints.
    97→// e.g. even though '>0.1,>0.2' is logically equivalent
    98→// to '>0.2' it is *NOT* treated as equal.
    99→//
   100→// Missing operator is treated as equal to '=', whitespaces
   101→// are ignored and constraints are sorted before comparison.
   102→func (cs Constraints) Equals(c Constraints) bool {
   103→	if len(cs) != len(c) {
      →	…
   125→func (cs Constraints) Len() int {
   126→	return len(cs)
   127→}
   129→func (cs Constraints) Less(i, j int) bool {
   130→	if cs[i].op < cs[j].op {
   131→		return true
   132→	}
   133→	if cs[i].op > cs[j].op {
   134→		return false
   135→	}
   136→
   137→	return cs[i].check.LessThan(cs[j].check)
   138→}
   140→func (cs Constraints) Swap(i, j int) {
   141→	cs[i], cs[j] = cs[j], cs[i]
   142→}
   144→// Returns the string format of the constraints
   145→func (cs Constraints) String() string {
   146→	csStr := make([]string, len(cs))
      →	…
   154→// Check tests if a constraint is validated by the given version.
   155→func (c *Constraint) Check(v *Version) bool {
   156→	return c.f(v, c.check)
      →	…
   159→// Prerelease returns true if the version underlying this constraint
   160→// contains a prerelease field.
   161→func (c *Constraint) Prerelease() bool {
   162→	return len(c.check.Prerelease()) > 0
      →	…
   165→func (c *Constraint) String() string {
   166→	return c.original
   167→}
   169→func parseSingle(v string) (*Constraint, error) {
   208→func prereleaseCheck(v, c *Version) bool {
   228→//-------------------------------------------------------------------
   229→// Constraint functions
   230→//-------------------------------------------------------------------
   232→type operator rune
   234→const (
   235→	equal            operator = '='
   236→	notEqual         operator = '≠'
   237→	greaterThan      operator = '>'
   238→	lessThan         operator = '<'
   239→	greaterThanEqual operator = '≥'
   240→	lessThanEqual    operator = '≤'
   241→	pessimistic      operator = '~'
   244→func constraintEqual(v, c *Version) bool {
   248→func constraintNotEqual(v, c *Version) bool {
   252→func constraintGreaterThan(v, c *Version) bool {
   256→func constraintLessThan(v, c *Version) bool {
   260→func constraintGreaterThanEqual(v, c *Version) bool {
   264→func constraintLessThanEqual(v, c *Version) bool {
   268→func constraintPessimistic(v, c *Version) bool {

constraint_test.go
     6→import …

version.go
     6→import (
     7→	"database/sql/driver"
     8→	"fmt"
     9→	"regexp"
    10→	"strconv"
    11→	"strings"
    12→	"sync"
    13→)
    15→// The compiled regular expression used to test the validity of a version.
    16→var (
    17→	versionRegexp     *regexp.Regexp
    18→	versionRegexpOnce sync.Once
    19→	semverRegexp      *regexp.Regexp
    20→	semverRegexpOnce  sync.Once
    23→func getVersionRegexp() *regexp.Regexp {
    30→func getSemverRegexp() *regexp.Regexp {
    37→// The raw regular expression string used for testing the validity
    38→// of a version.
    39→const (
    40→	VersionRegexpRaw string = `v?([0-9]+(\.[0-9]+)*?)` +
    41→		`(-([0-9]+[0-9A-Za-z\-~]*(\.[0-9A-Za-z\-~]+)*)|(-?([A-Za-z\-~]+[0-9A-Za-z\-~]*(\.[0-9A-Za-z\-~]+)*)))?` +
      →		…
    45→	// SemverRegexpRaw requires a separator between version and prerelease
    46→	SemverRegexpRaw string = `v?([0-9]+(\.[0-9]+)*?)` +
    47→		`(-([0-9]+[0-9A-Za-z\-~]*(\.[0-9A-Za-z\-~]+)*)|(-([A-Za-z\-~]+[0-9A-Za-z\-~]*(\.[0-9A-Za-z\-~]+)*)))?` +
    48→		`(\+([0-9A-Za-z\-~]+(\.[0-9A-Za-z\-~]+)*))?` +
    49→		`?`
    52→// Version represents a single version.
    53→type Version struct {
    54→	metadata string
    55→	pre      string
    56→	segments []int64
    57→	si       int
    58→	original string
    59→}
    61→// NewVersion parses the given version and returns a new
    62→// Version.
    63→func NewVersion(v string) (*Version, error) {
    64→	return newVersion(v, getVersionRegexp())
      →	…
    67→// NewSemver parses the given version and returns a new
    68→// Version that adheres strictly to SemVer specs
    69→// https://semver.org/
    70→func NewSemver(v string) (*Version, error) {
    71→	return newVersion(v, getSemverRegexp())
      →	…
    74→func newVersion(v string, pattern *regexp.Regexp) (*Version, error) {
   112→// Must is a helper that wraps a call to a function returning (*Version, error)
   113→// and panics if error is non-nil.
   114→func Must(v *Version, err error) *Version {
   115→	if err != nil {
      →	…
   122→// Compare compares this version to another version. This
   123→// returns -1, 0, or 1 if this version is smaller, equal,
   124→// or larger than the other version, respectively.
   125→//
   126→// If you want boolean results, use the LessThan, Equal,
   127→// GreaterThan, GreaterThanOrEqual or LessThanOrEqual methods.
   128→func (v *Version) Compare(other *Version) int {
   129→	// A quick, efficient equality check
      →	…
   196→func (v *Version) equalSegments(other *Version) bool {
   211→func allZero(segs []int64) bool {
   220→func comparePart(preSelf string, preOther string) int {
   267→func comparePrereleases(v string, other string) int {
   307→// Core returns a new version constructed from only the MAJOR.MINOR.PATCH
   308→// segments of the version, without prerelease or metadata.
   309→func (v *Version) Core() *Version {
   310→	segments := v.Segments64()
      →	…
   315→// Equal tests if two versions are equal.
   316→func (v *Version) Equal(o *Version) bool {
   317→	if v == nil || o == nil {
      →	…
   324→// GreaterThan tests if this version is greater than another version.
   325→func (v *Version) GreaterThan(o *Version) bool {
   326→	return v.Compare(o) > 0
      →	…
   329→// GreaterThanOrEqual tests if this version is greater than or equal to another version.
   330→func (v *Version) GreaterThanOrEqual(o *Version) bool {
   331→	return v.Compare(o) >= 0
      →	…
   334→// LessThan tests if this version is less than another version.
   335→func (v *Version) LessThan(o *Version) bool {
   336→	return v.Compare(o) < 0
      →	…
   339→// LessThanOrEqual tests if this version is less than or equal to another version.
   340→func (v *Version) LessThanOrEqual(o *Version) bool {
   341→	return v.Compare(o) <= 0
      →	…
   344→// Metadata returns any metadata that was part of the version
   345→// string.
   346→//
   347→// Metadata is anything that comes after the "+" in the version.
   348→// For example, with "1.2.3+beta", the metadata is "beta".
   349→func (v *Version) Metadata() string {
   350→	return v.metadata
      →	…
   353→// Prerelease returns any prerelease data that is part of the version,
   354→// or blank if there is no prerelease data.
   355→//
   356→// Prerelease information is anything that comes after the "-" in the
   357→// version (but before any metadata). For example, with "1.2.3-beta",
   358→// the prerelease information is "beta".
   359→func (v *Version) Prerelease() string {
   360→	return v.pre
      →	…
   363→// Segments returns the numeric segments of the version as a slice of ints.
   364→//
   365→// This excludes any metadata or pre-release information. For example,
   366→// for a version "1.2.3-beta", segments will return a slice of
   367→// 1, 2, 3.
   368→func (v *Version) Segments() []int {
   369→	segmentSlice := make([]int, len(v.segments))
      →	…
   376→// Segments64 returns the numeric segments of the version as a slice of int64s.
   377→//
   378→// This excludes any metadata or pre-release information. For example,
   379→// for a version "1.2.3-beta", segments will return a slice of
   380→// 1, 2, 3.
   381→func (v *Version) Segments64() []int64 {
   382→	result := make([]int64, len(v.segments))
      →	…
   387→// String returns the full version string included pre-release
   388→// and metadata information.
   389→//
   390→// This value is rebuilt according to the parsed segments and other
   391→// information. Therefore, ambiguities in the version string such as
   392→// prefixed zeroes (1.04.0 => 1.4.0), `v` prefix (v1.0.0 => 1.0.0), and
   393→// missing parts (1.0 => 1.0.0) will be made into a canonicalized form
   394→// as shown in the parenthesized examples.
   395→func (v *Version) String() string {
   396→	return string(v.bytes())
      →	…
   399→func (v *Version) bytes() []byte {
   421→// Original returns the original parsed version as-is, including any
   422→// potential whitespace, `v` prefix, etc.
   423→func (v *Version) Original() string {
   424→	return v.original
      →	…
   427→// UnmarshalText implements encoding.TextUnmarshaler interface.
   428→func (v *Version) UnmarshalText(b []byte) error {
   429→	temp, err := NewVersion(string(b))
      →	…
   439→// MarshalText implements encoding.TextMarshaler interface.
   440→func (v *Version) MarshalText() ([]byte, error) {
   441→	return []byte(v.String()), nil
      →	…
   444→// Scan implements the sql.Scanner interface.
   445→func (v *Version) Scan(src interface{}) error {
   446→	switch src := src.(type) {
      →	…
   456→// Value implements the driver.Valuer interface.
   457→func (v *Version) Value() (driver.Value, error) {
   458→	return v.String(), nil
      →	…

version_collection.go
     6→// Collection is a type that implements the sort.Interface interface
     7→// so that versions can be sorted.
     8→type Collection []*Version
    10→func (v Collection) Len() int {
    11→	return len(v)
    12→}
    14→func (v Collection) Less(i, j int) bool {
    15→	return v[i].LessThan(v[j])
    16→}
    18→func (v Collection) Swap(i, j int) {
    19→	v[i], v[j] = v[j], v[i]
    20→}

version_collection_test.go
     6→import …

version_test.go
     6→import …
