tests/snapshots/snapshots__budget_go_version_500.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 500 → level 3 (413 words)

CHANGELOG.md
     1→# 1.8.0 (Nov 28, 2025)
    24→# 1.7.0 (May 24, 2024)
    43→# 1.6.0 (June 28, 2022)
    49→# 1.5.0 (May 18, 2022)
    56→# 1.4.0 (January 5, 2022)
    63→# 1.3.0 (March 31, 2021)
    70→# 1.2.1 (June 17, 2020)
    75→# 1.2.0 (April 23, 2019)
    80→# 1.1.0 (Jan 07, 2019)
    85→# 1.0.0 (August 24, 2018)
README.md
     1→# Versioning Library for Go
    13→## Installation and Usage
    24→#### Version Parsing and Comparison
    37→#### Version Constraints
    49→#### Version Sorting
    63→## Issues and Contributing
constraint.go
    14→var
    15→	constraintRegexp
    16→	constraintRegexpOnce
    19→func getConstraintRegexp
    33→type Constraint struct {
    40→func (c *Constraint) Equals(con *Constraint) bool {
    46→type Constraints []*Constraint
    48→type constraintFunc
    50→type constraintOperation
    58→func NewConstraint(v string) (Constraints, error) {
    75→func MustConstraints(c Constraints, err error) Constraints {
    84→func (cs Constraints) Check(v *Version) bool {
   102→func (cs Constraints) Equals(c Constraints) bool {
   125→func (cs Constraints) Len() int {
   129→func (cs Constraints) Less(i, j int) bool {
   140→func (cs Constraints) Swap(i, j int) {
   145→func (cs Constraints) String() string {
   155→func (c *Constraint) Check(v *Version) bool {
   161→func (c *Constraint) Prerelease() bool {
   165→func (c *Constraint) String() string {
   169→func parseSingle
   208→func prereleaseCheck
   232→type operator
   234→const
   235→	equal
   236→	notEqual
   237→	greaterThan
   238→	lessThan
   239→	greaterThanEqual
   240→	lessThanEqual
   241→	pessimistic
   244→func constraintEqual
   248→func constraintNotEqual
   252→func constraintGreaterThan
   256→func constraintLessThan
   260→func constraintGreaterThanEqual
   264→func constraintLessThanEqual
   268→func constraintPessimistic
version.go
    16→var
    17→	versionRegexp
    18→	versionRegexpOnce
    19→	semverRegexp
    20→	semverRegexpOnce
    23→func getVersionRegexp
    30→func getSemverRegexp
    39→const
    40→	VersionRegexpRaw string = `v?([0-9]+(\.[0-9]+)*?)` +
    46→	SemverRegexpRaw string = `v?([0-9]+(\.[0-9]+)*?)` +
    53→type Version struct {
    63→func NewVersion(v string) (*Version, error) {
    70→func NewSemver(v string) (*Version, error) {
    74→func newVersion
   114→func Must(v *Version, err error) *Version {
   128→func (v *Version) Compare(other *Version) int {
   196→func (v *Version) equalSegments
   211→func allZero
   220→func comparePart
   267→func comparePrereleases
   309→func (v *Version) Core() *Version {
   316→func (v *Version) Equal(o *Version) bool {
   325→func (v *Version) GreaterThan(o *Version) bool {
   330→func (v *Version) GreaterThanOrEqual(o *Version) bool {
   335→func (v *Version) LessThan(o *Version) bool {
   340→func (v *Version) LessThanOrEqual(o *Version) bool {
   349→func (v *Version) Metadata() string {
   359→func (v *Version) Prerelease() string {
   368→func (v *Version) Segments() []int {
   381→func (v *Version) Segments64() []int64 {
   395→func (v *Version) String() string {
   399→func (v *Version) bytes
   423→func (v *Version) Original() string {
   428→func (v *Version) UnmarshalText(b []byte) error {
   440→func (v *Version) MarshalText() ([]byte, error) {
   445→func (v *Version) Scan(src interface{}) error {
   457→func (v *Version) Value() (driver.Value, error) {
version_collection.go
     8→type Collection []*Version
    10→func (v Collection) Len() int {
    14→func (v Collection) Less(i, j int) bool {
    18→func (v Collection) Swap(i, j int) {
