tests/snapshots/snapshots__budget_go_version_level0.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 3 → level 0 (5 words)

CHANGELOG.md
README.md
constraint.go
version.go
version_collection.go
